# collect_failable

./: .gitignore  BENCHMARKS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  DESIGN.md  README.md  TODO.md  coverage.json  coverage_report.txt  deny.toml  release_notes.md  rustfmt.toml  test_output.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: audit.yml  cd.yml  coverage.yml  docs.yml  publish.yml
benches/: array_monomorphization.rs  try_extend_comparison.rs  try_from_iter_comparison.rs
src/: collect_failable_ex.rs  collect_failable_ext.rs  errors.rs  lib.rs  try_collect_ex.rs  try_extend.rs  try_from_iterator.rs  try_unzip.rs  utils.rs
src/errors/: capacity_error.rs  capacity_mismatch.rs  collect_error.rs  collection_collision.rs  collection_error.rs  collision.rs  error_item_provider.rs  exceeds_capacity.rs  extend_error.rs  item_collision.rs  item_count_mismatch.rs  key_collision.rs  mod.rs  one_of2.rs  partial_iter_error.rs  result_collection_error.rs  tuple_collection_error.rs  tuple_extend_error.rs  tuple_extension_error.rs  unzip_error.rs  value_collision.rs
src/errors/cap/: collect.rs  error.rs
src/errors/capacity/: collect.rs  error.rs  extend.rs  mod.rs  traits.rs
src/errors/collision/: collect.rs  error.rs  extend.rs  mod.rs
src/impls/: array.rs  arrayvec.rs  btree_map.rs  ensure_empty.rs  hash_map.rs  hashbrown.rs  indexmap.rs  macros.rs  mod.rs  result.rs  tests.rs  tuples.rs  vec.rs  vector.rs
src/impls/maps/: btree_map.rs  hash_map.rs  hashbrown.rs  indexmap.rs  mod.rs
src/impls/sets/: btree_set.rs  hash_set.rs  hashbrown_set.rs  indexset.rs  mod.rs
src/impls/unsafe/: array.rs  array_index.rs  init_guard.rs  mod.rs  partial_array.rs  slice_guard.rs
src/iterators/: btree_map.rs  hash_map.rs  hashbrown.rs  indexmap.rs  mod.rs  tests.rs
src/maps/: btree_map.rs  hash_map.rs  indexmap.rs  mod.rs
src/sets/: btree_set.rs  hash_set.rs  hashbrown.rs  indexset.rs  mod.rs  tests.rs
src/traits/: capacity.rs  fold_mut.rs  mod.rs  size.rs  try_collect_ex.rs  try_extend.rs  try_from_iterator.rs  try_unzip.rs
src/utils/: debug_option.rs  fixed_size_hint.rs  fold_mut.rs  identifiable.rs  mod.rs  no_drop.rs  result_type_debug.rs
tests/: array-safety.rs  array.rs  array_try_from_iter.rs  arrayvec.rs  collection_tests.rs  fold_mut.rs  maps.rs  result.rs  result_iterator_recovery.rs  sets.rs  try-collect-ex.rs  try-extend.rs  try-from-iterator.rs  try-unzip.rs  try_collect_ex.rs  try_extend.rs  try_unzip.rs  tuples.rs
tests/doc/: array.rs  arrayvec.rs  fold_mut.rs  main.rs  result.rs  try_collect_ex.rs  try_extend.rs  try_from_iterator.rs  try_unzip.rs  tuples.rs
tests/errors/: capacity_error.rs  capacity_mismatch.rs  collection_collision.rs  collection_error.rs  collision.rs  error_tests.rs  exceeds_capacity.rs  extend_error.rs  main.rs  result_collection_error.rs  test_macros.rs  tuple_collection_error.rs  tuple_extend_error.rs  tuple_extension_error.rs  unzip_error.rs
tests/impl/: array.rs  array_index.rs  array_safety.rs  arrayvec.rs  collection_tests.rs  collision_tests.rs  ensure_empty.rs  main.rs  maps.rs  partial_array.rs  result.rs  result_iterator_recovery.rs  sets.rs  try_unzip.rs  tuples.rs  vec.rs
tests/utils/: fixed_size_hint.rs  hide_size.rs  identifiable.rs  mod.rs  panics.rs
