[package]
name = "collect_failable"
version = "0.12.3"
edition = "2021"
description = "A trait for collecting values into a container which has an invariant to uphold and whose construction may fail"
repository = "https://github.com/MaxMahem/collect_failable"
homepage = "https://github.com/MaxMahem/collect_failable"
documentation = "https://maxmahem.github.io/collect_failable/"
keywords = ["iterator", "collect", "container"]
authors = ["Austin Stanley <maxtmahem@gmail>"]
license = "MIT OR Apache-2.0"
categories = ["data-structures", "rust-patterns"]

[features]
default = ["unsafe", "tuple"]
unsafe = []
tuple = []
hashbrown = [ "dep:hashbrown" ]
indexmap = [ "dep:indexmap" ]
arrayvec = [ "dep:arrayvec" ]

[dependencies]
tap = { version = "1.0.1" }
thiserror = { version = "2.0.17" }
hashbrown = { version = "0.16.0", optional = true }
derive_more = { version = "2.1.0", features = ["constructor", "from", "is_variant", "try_unwrap", "unwrap", "deref", "display"] }
indexmap = { version = "2.12.0", optional = true }
arrayvec = { version = "0.7.6", optional = true }
sealed = "0.6.0"
subdef = "0.1.2"
fluent_result = "0.9.0"
no_drop = "0.2.3"
display_as_debug = "0.2.0"
readonly = "0.2.13"
either = "1.15.0"

[dev-dependencies]
collect_failable = { path = ".", features = ["hashbrown", "indexmap", "arrayvec"] }
